# ESP32-HOST-MIDI

./: .gitignore  README.md  sdkconfig.defaults
components/piano_app/: CMakeLists.txt
components/piano_app/include/: piano_app.h  piano_ble.h  piano_config.h  piano_display.h  piano_synth.h  piano_types.h  piano_wifi.h
components/piano_app/src/: piano_app.cpp  piano_ble.cpp  piano_display.cpp  piano_synth.cpp  piano_wifi.cpp
components/wt99p4c5_s1_board/: CMakeLists.txt  idf_component.yml  wt99p4c5_s1_board.c
main/: CMakeLists.txt  idf_component.yml  main.cpp
